--- a/hohos/core/templates/core/cover.html
+++ b/hohos/core/templates/core/cover.html
@@ -193,32 +193,30 @@ small a:hover { color: black; }
 
 {% block js %}
 
+{% include 'core/cover_js.html' %}
 <script type="text/javascript">
   
-  Tipped.create(".loginbtn",{position: 'right'});
-  Tipped.create(".Signupbtn",{position: 'left'});
-  Tipped.create(".resetpasswordbtn",{position: 'right'});
-  // Tipped.create(".hohoslogo",{position : 'top'});
+//   Tipped.create(".loginbtn",{position: 'right'});
+//   Tipped.create(".Signupbtn",{position: 'left'});
+//   Tipped.create(".resetpasswordbtn",{position: 'right'});
+//   // Tipped.create(".hohoslogo",{position : 'top'});
 
-  // Tipped.create("#invite",{position : 'left'});
-  // Tipped.create("#invitebutton",{position : 'topleft'});  
-  Tipped.create(".talkus",{position : 'right'});
+//   // Tipped.create("#invite",{position : 'left'});
+//   // Tipped.create("#invitebutton",{position : 'topleft'});  
+//   Tipped.create(".talkus",{position : 'right'});
 
-  Tipped.create("#username",{position : 'right'});
-  Tipped.create("#password",{position : 'right'});
+//   Tipped.create("#username",{position : 'right'});
+//   Tipped.create("#password",{position : 'right'});
 
-</script>
+// $('.welcometext').typeIt({ speed:60, breakLines:false, autoStart:false });
+// $('.hohoslogo').typeIt({ cursor: false});
 
-<script type="text/javascript">
-$('.welcometext').typeIt({ speed:60, breakLines:false, autoStart:false });
-$('.hohoslogo').typeIt({ cursor: false});
-
-$('.welcomeback').typeIt({ 
-  speed: 90, 
-  autoStart: false,
-  loop : true,
-  loopDelay: 1550,
-});
+// $('.welcomeback').typeIt({ 
+//   speed: 90, 
+//   autoStart: false,
+//   loop : true,
+//   loopDelay: 1550,
+// });
 
 </script>
 
