--- a/hohos/hohos/templates/registration/password_reset_email.html
+++ b/hohos/hohos/templates/registration/password_reset_email.html
@@ -9,7 +9,7 @@ Hey {{ user.get_username }}, forgot Password?, Take it easy, Just reset your pas
 
 {% block reset_link %} 
 
-{{ protocol }}://hohos.in{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://hohos.tech{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 
 {% trans "Your username, in case you forgot, is :" %} {{ user.get_username }}
