--- a/hohos/newsletter/templates/newsletter/about.html
+++ b/hohos/newsletter/templates/newsletter/about.html
@@ -96,7 +96,7 @@ a:hover {color: black;}
           </td>
           <td>
           <i class="fa fa-facebook fa-1x fa-fw"></i>
-          <a href="https://www.facebook.com/ceohohos">Facebook</a>            
+          <a href="https://www.facebook.com/dbadss">Facebook</a>            
           </td>
           <td>
           <i class="fa fa-linkedin fa-1x fa-fw"></i>
@@ -152,7 +152,7 @@ We might have better things than we have now. This will bring great changes in u
 <hr class="hr" >
 
 <div class="myview">
-hohos is for people who love too see the versions of things and specially human expressions. Yes! This is the place here,you can upload your selfies or some of your cool pics and let others copy your styles and upload their own version of these selfies and styles. Because it's fun cpying others styles :)
+hohos is for people who love to see the versions of things and specially human expressions. Yes! This is the place here,you can upload your selfies or some of your cool pics and let others copy your styles and upload their own version of these selfies and styles. Because it's fun cpying others styles :)
 </div>
 
   <hr class="hr">
