--- a/hohos/newsletter/templates/newsletter/about_under.html
+++ b/hohos/newsletter/templates/newsletter/about_under.html
@@ -32,7 +32,7 @@
           </td>
           <td>
           <i class="fa fa-facebook fa-1x fa-fw"></i>
-          <a href="https://www.facebook.com/Ddronearkon">Facebook</a>            
+          <a href="https://www.facebook.com/dbadss">Facebook</a>            
           </td>
           <td>
           <i class="fa fa-linkedin fa-1x fa-fw"></i>
