--- a/hohos/newsletter/templates/newsletter/introho.html
+++ b/hohos/newsletter/templates/newsletter/introho.html
@@ -115,7 +115,7 @@ small a:hover {color: black;}
     {% endif %}
 </div><br>
 
- <a style="margin-left:160px; width:150px;" href="http://imperialarkon.hohos.in" class="btn btn-info text-center">
+ <a style="margin-left:160px; width:150px;" href="mailto:hohosguys@gmail.com" class="btn btn-info text-center">
   <i class="fa fa-sign-in fa-1x" ></i>  Join Us
  </a>
 
