changing invite email

--- a/hohos/hohos/templates/header.html
+++ b/hohos/hohos/templates/header.html
@@ -144,7 +144,7 @@
 
                 <li><a href="{% url 'feeds' %}" style="font-weight:bold; font-size:16px; color:black;" class="btn response mainitems">{% trans 'Response' %}</a></li>
                 <li><a href="{% url 'challenge_feeds' %}" style="font-size:16px; color:black;" class="btn challenge mainitems">{% trans 'Challenge' %}</a></li>
-              <li><a href="{% url 'profilefeeds_h_h' %}" style="font-size:16px; color:black;" class="btn openchat mainitems">{% trans 'OpenChat' %}</a></li>
+              <!-- <li><a href="{% url 'profilefeeds_h_h' %}" style="font-size:16px; color:black;" class="btn openchat mainitems">{% trans 'OpenChat' %}</a></li> -->
               {% else %}
               <li><a href="{% url 'about' %}" style="color:white; font-size:17px;" class="wearehere mainitems">{% trans 'We are here' %}</a></li>
               {% endif %}
