passwd emails change

--- a/hohos/hohos/templates/registration/password_reset_email.html
+++ b/hohos/hohos/templates/registration/password_reset_email.html
@@ -17,7 +17,7 @@ Hey {{ user.get_username }}, forgot Password?, Take it easy, Just reset your pas
 
 {% trans "Thanks for using our site! We @hohos are happy to help you." %} 
 
-{% blocktrans %}Team <a href="www.hohos.tech">hohos</a>{% endblocktrans %}
+{% blocktrans %}Team www.hohos.tech</a>{% endblocktrans %}
 
 {% endautoescape %}
  
